(lang dune 3.20)

(name cueh)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Anh-Khoa <nganhkhoa@u.northwestern.edu>")

(maintainers "Anh-Khoa <nganhkhoa@u.northwestern.edu>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cueh)
 (synopsis "Software Contract using Effect Handlers")
 (description "Implementing Software Contract using Effect Handlers")
 (depends ocaml)
 (tags
  ("software contract" "effect handlers" "theory")))
